tests/error/modInteger-wrong-1st-argument-data.uplc
(program 1.0.0[[(builtin modInteger)(con data {ByteString #AFD3})](con integer 10)])